<resources>
    <!--    Đăng nhập-->
    <string name="app_name">Đăng nhập</string>
    <string name="eTxtEmail_hint">Email</string>
    <string name="eTxtPassword_hint">Mật khẩu</string>

    <!--    Đăng ký-->
    <string name="txtRegister_txt">Đăng ký</string>
    <string name="eTxtFirstName_txt">Họ</string>
    <string name="eTxtLastName_txt">Tên</string>
    <string name="txtLoginRedirect_txt">Đã có tài khoản? Hãy nhấn Đăng nhập</string>
    <string name="btnUpload_txt">Upload ảnh đại diện</string>

    <!--    Navigation Tab-->
    <string name="nav_statistic_item">Thống kê điểm số sinh viên</string>
    <string name="nav_home_item">Trang chủ</string>
    <string name="nav_input_score_item">Nhập điểm cho sinh viên</string>
    <string name="nav_log_out_item">Đăng xuất</string>
    <string name="nav_user_item">Thông tin cá nhân</string>
    <string name="nav_admin">Admin</string>


    <!--    Navigation Text-->
    <string name="nav_open">Mở</string>
    <string name="nav_close">Đóng</string>
    <string name="anonymous">Anonymous</string>
    <string name="requireLogin">Please login to use our system</string>

    <!--    Home    -->
    <string name="txtMessageRecommendToUpdateData">Chúng tôi có vẻ chưa có đủ thông tin về bạn. Nhấn vào đây để cập nhật thông tin</string>

    <!--    Teaching Subjects-->
    <string name="txtSearchSubjectName_txt">Tên môn học: </string>
    <string name="eTxtSearchSubjectName_hint">Nhập tên môn học</string>
    <string name="txtTeachingSubjectsTitle_txt">Danh sách các môn học giảng dạy</string>
    <string name="btnSearch_txt">Tìm kiếm</string>

    <!--    Input Score-->
    <string name="txtProgressScoreTitle_txt">Điểm quá trình</string>
    <string name="txtMiddleSemesterScoreTitle_txt">Điểm giữa kỳ</string>
    <string name="txtFinalSemesterScoreTitle_txt">Điểm cuối kỳ</string>
    <string name="btnSave_txt">Hoàn tất nhập điểm</string>

    <!--    UserStatistics-->
    <string name="txtStatisticsTitle_txt">Thống kê điểm số</string>

    <!--    Profile-->
    <string name="btnChangeInfo_txt">Chỉnh sửa thông tin cá nhân</string>
    <string name="btnSubmitChanging_txt">Xác nhận</string>


    <string name="tv_firstname">Họ</string>
    <string name="tv_lastname">Tên</string>
    <string name="tv_email">Email</string>
    <string name="tv_department">Khoa</string>
    <string name="tv_subject_name">Môn học</string>
    <string name="tv_credit_number">Số tín chỉ</string>
    <string name="prompt_choose_major">Chọn ngành học</string>
    <string name="prompt_choose_department">Chọn khoa</string>
    <string name="prompt_choose_creditNumber">Chọn số tín chỉ</string>
    <string name="spinner_classes">Chọn lớp</string>

    <string name="eTxtSubjectName">Tên môn học</string>
    <string name="eTxtClassName">Tên lớp</string>
    <string name="btnAdd_txt">Thêm</string>
    <string name="btnEdit_txt">Sửa</string>
    <string-array name="roles_array">
        <item>admin</item>
        <item>teacher</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>