<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registerCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtRegister_txt"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtEmail_hint"
                android:inputType="text"
                android:padding="8dp"
                android:text="lttvu3003@gmail.com" />

            <EditText
                android:id="@+id/eTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_pwd"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtPassword_hint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:text="123456" />

            <EditText
                android:id="@+id/eTxtLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtFirstName_txt"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/eTxtFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtLastName_txt"
                android:inputType="text"
                android:padding="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/btnUpload_txt"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="120dp"
                    android:layout_height="120dp"

                    android:layout_gravity="center"
                    android:background="@drawable/custom_edit_text"
                    android:padding="10dp"
                    android:src="@drawable/ic_plus" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple_200"
                android:text="@string/txtRegister_txt"
                android:textSize="15sp"
                app:cornerRadius="25dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtLoginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple_200" />
</LinearLayout>