<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/txtMessageRecommendToUpdateData"
        android:padding="15dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8d7da"
        android:textColor="#721c35"
        android:textSize="18sp"
        android:textAlignment="center"
        android:text="@string/txtMessageRecommendToUpdateData" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        >

        <LinearLayout
            android:id="@+id/layoutInputScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/home"
            android:paddingHorizontal="5dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/input_score"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22dp"
                android:text="@string/nav_input_score_item"
                android:layout_marginHorizontal="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/home">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nav_statistic_item"
                android:textAlignment="center"
                android:textSize="22dp"
                android:layout_marginHorizontal="10dp"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/bar"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>