<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edit_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/purple_200"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtEmail_hint"
                android:inputType="text"
                android:padding="8dp" />

            <EditText
                android:id="@+id/eTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_edit_text"
                android:drawableStart="@drawable/ic_pwd"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/eTxtPassword_hint"
                android:inputType="textPassword"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/purple_200"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                app:cornerRadius="25dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtRegisterRedirect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000" />

</LinearLayout>